z-index fix

--- a/src/styles/Info.css
+++ b/src/styles/Info.css
@@ -8,6 +8,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Mjuk skugga för att skapa djup */
     text-align: left;
+    z-index: 1;
  
   
   h1 {
